@@ -1,3 +1,6 @@
+2005-07-25 Craig Franklin <craigfranklin@users.sourceforge.net>
+  * [gplink] Changed order of stack and cinit functions to fix bugs.
+
 2005-06-14 Alain Portal <aportal AT univ-montp2 DOT fr>
   * [man] Updated French man pages.
 
